some small changes

--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@
                 <a href="commissions.html">commissions</a>
                 <a href="contact.html">contact</a>
             </li>
-            <hr>
         </div>
 
         <div class="socials">
@@ -49,14 +48,18 @@
         <p>Hello, my name is Nen. I'm a programmer, writer, editor, video producer and musician. I like writing, making
             videos and thinking too deeply about simple/mundane things, and I would love to do those things till the day
             I
-            die and then be brought back to continue because I assume you're a necromancer. </p>
-            <br>
+            die and then be brought back to continue because I assume you're a necromancer.<p id="popin-onscroll">...
+                are you?</p>
+        </p>
+        <br>
 
         <p class="trivia">Random Trivia about Myself</p>
         <ul>
             <li>My home had to be remodeled to accomodate my height</li>
-            <li>I once cosplayed as Minecraft Steve in an attempt to look cool in high school</li>
+            <li>I once cosplayed as Minecraft Steve in an attempt to look cool in high school. I wasn't deterred however
+                and in a show of my indomitable personality I...wore it again the year after.</li>
             <li>I like mustard on hotdogs</li>
+            <li id="popup-list">water's not wet</li>
         </ul>
     </div>
 
