--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,7 @@
 
     <div class="contact-blurb">
         <h2>
-            I'd love to hear from you, especially if you want to work
-            together
+            Thanks for sending me a message, I love you bud.
         </h2>
         <p>If you don't like forms my email is nen@webcomicshub.co.uk</p>
     </div>
