--- a/about.html
+++ b/about.html
@@ -55,11 +55,11 @@
 
         <p class="trivia">Random Trivia about Myself</p>
         <ul>
-            <li>My home had to be remodeled to accomodate my height</li>
-            <li>I once cosplayed as Minecraft Steve in an attempt to look cool in high school. I wasn't deterred however
+            <li class="list">My home had to be remodeled to accomodate my height</li>
+            <li class="list">I once cosplayed as Minecraft Steve in an attempt to look cool in high school. I wasn't deterred however
                 and in a show of my indomitable personality I...wore it again the year after.</li>
-            <li>I like mustard on hotdogs</li>
-            <li id="popup-list">water's not wet</li>
+            <li class="list">I like mustard on hotdogs</li>
+            <li class="list" id="popup-list">water's not wet</li>
         </ul>
     </div>
 
