--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
 
         <div class="socials">
             <li>
-                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube"></a>
-                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter"></a>
-                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch"></a>
-                <a href="discord" class="fab fa-discord"></a>
+                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube">youtube</a>
+                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter">twitter</a>
+                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch">twitch</a>
+                <a href="discord" class="fab fa-discord">discord</a>
             </li>
         </div>
     </div>
@@ -50,7 +50,7 @@
             videos and thinking too deeply about simple/mundane things, and I would love to do those things till the day
             I
             die and then be brought back to continue because I assume you're a necromancer. </p>
-            <br>
+        <br>
 
         <p class="trivia">Random Trivia about Myself</p>
         <ul>
