--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,16 +1,16 @@
 <html lang="en">
 
 <head>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="MyStyle.css" />
-    <link rel="stylesheet" type="text/css" href="contact.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/contact.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>contact</title>
     <script src="https://kit.fontawesome.com/2fba591cf1.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/Javascript/mainjavascript.js"></script>
 </head>
 
 <!-- Boilerplate Navbar -->
@@ -18,7 +18,7 @@
 <body class="contact">
     <div class="navbar-container">
         <div class="header">
-            <h1><a href="nen.studio.html">Nen - Maker of Things</a></h1>
+            <h1><a href="../nen.studio.html">Nen - Maker of Things</a></h1>
         </div>
 
         <div class="navbar">
@@ -32,10 +32,18 @@
 
         <div class="socials">
             <li>
-                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube"></a>
-                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter"></a>
-                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch"></a>
-                <a href="discord" class="fab fa-discord"></a>
+                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube">
+                    <p id="hidetext">youtube</p>
+                </a>
+                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter">
+                    <p id="hidetext">twitter</p>
+                </a>
+                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch">
+                    <p id="hidetext">twitch</p>
+                </a>
+                <a href="discord" class="fab fa-discord">
+                    <p id="hidetext">discord</p>
+                </a>
             </li>
         </div>
     </div>
@@ -54,7 +62,7 @@
             <div class="pronouns">
                 <span class="label-input">pronouns</span><br />
                 <select name="pronouns" id="pronouns">
-                    <option value="" disabled selected hidden "></option>
+                    <option value="" disabled selected hidden></option>
                     <option value=" male">He/Him</option>
                     <option value="female">She/Her</option>
                     <option value="non-gendered">They/Them</option>
@@ -89,7 +97,6 @@
         </form>
     </div>
     <div class="line">
-        <hr>
     </div>
 </body>
 
