some responsiveness and projects has been given a seeing to

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -53,14 +53,8 @@
     </div>
 
     <div class="about-blurb">
-        <p>Hello, my name is Nen. I'm a programmer, writer, editor, video producer and musician. I like writing, making
-            videos and thinking too deeply about simple/mundane things. I hope to keep making cool and interesting things till the day
-            I
-            die, only to then be brought back to life, forced to endlessly toil for you the Necromancer who raised me...
+        <p>Hello, my name is Nen. I do a bunch of things with a bunch of people, check out my projects section to see that but since you're here.
         </p>
-
-        <p id="popin-onscroll">...are you a necromancer?</p>
-        <br>
 
         <p class="trivia">Random Trivia about Myself</p>
         <ul>
@@ -71,6 +65,4 @@
         </ul>
     </div>
 
-</body>
-
-</html>
+</body></html>
