--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/projects.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -12,7 +13,8 @@
     <script type="text/javascript" src="/Javascript/mainjavascript.js"></script>
 </head>
 
-<!-- Boilerplate Navbar -->    
+<!-- Boilerplate Navbar -->
+
 <body class="projects">
     <div class="navbar-container">
         <div class="header">
@@ -30,12 +32,33 @@
 
         <div class="socials">
             <li>
-                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube"><p id="hidetext">youtube</p></a>
-                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter"><p id="hidetext">twitter</p></a>
-                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch"><p id="hidetext">twitch</p></a> 
-                <a href="discord" class="fab fa-discord"><p id="hidetext">discord</p></a>
+                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube">
+                    <p id="hidetext">youtube</p>
+                </a>
+                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter">
+                    <p id="hidetext">twitter</p>
+                </a>
+                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch">
+                    <p id="hidetext">twitch</p>
+                </a>
+                <a href="discord" class="fab fa-discord">
+                    <p id="hidetext">discord</p>
+                </a>
             </li>
         </div>
     </div>
-    </body>
-</html>
+
+    <div class="projects-showcase">
+        <h2>these are some things I've made</h2>
+        <p>hope you have fun listening/watching/reading them</p>
+        <div id="projects">
+            <div class="column" id="webcomicshub"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                <p id="text">webcomics hub</p>
+            </div>
+            <div class="column" id="spacemannfinn"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="webcomicshubcast"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="comics"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="music"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+        </div>
+    </div>
+</body></html>
