--- a/nen.studio.html
+++ b/nen.studio.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html class="no.js" lang="en">
+<html class="no-js" lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href= "/CSS/MyStyle.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/CSS/MyStyle.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>neN</title>
     <script>
         document.documentElement.classList.remove("no-js");
-      </script>
+    </script>
     <script src="https://kit.fontawesome.com/2fba591cf1.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="/Javascript/mainjquery.js"></script>
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    
+
     <div class="navbar-container">
 
         <div class="header">
@@ -36,10 +36,18 @@
 
         <div class="socials">
             <li>
-                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube"><p id="hidetext">youtube</p></a>
-                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter"><p id="hidetext">twitter</p></a>
-                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch"><p id="hidetext">twitch</p></a> 
-                <a href="discord" class="fab fa-discord"><p id="hidetext">discord</p></a>
+                <a href="https://www.youtube.com/webcomicshub" class="fab fa-youtube">
+                    <p id="hidetext">youtube</p>
+                </a>
+                <a href="https://twitter.com/Earthbound_M" class="fab fa-twitter">
+                    <p id="hidetext">twitter</p>
+                </a>
+                <a href="https://www.twitch.tv/spacemannfinn" class="fab fa-twitch">
+                    <p id="hidetext">twitch</p>
+                </a>
+                <a href="discord" class="fab fa-discord">
+                    <p id="hidetext">discord</p>
+                </a>
             </li>
         </div>
 
