--- a/HTML/about.html
+++ b/HTML/about.html
@@ -10,6 +10,7 @@
     <title>contact</title>
     <script src="https://kit.fontawesome.com/2fba591cf1.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/Javascript/webp.js"></script>
     <script type="text/javascript" src="/Javascript/mainjavascript.js"></script>
 </head>
 
@@ -53,7 +54,7 @@
     </div>
 
     <div class="about-blurb">
-        <p>Hello, my name is Nen. I do a bunch of things with a bunch of people, check out my projects section to see that but since you're here.
+        <p>Hello, my name is Nen. I'm a video producer, programmer and I make/do a bunch of other things with a lot of lovely people , check out my projects section to see that but since you're here.
         </p>
 
         <p class="trivia">Random Trivia about Myself</p>
@@ -61,6 +62,7 @@
             <li class="list">My home had to be remodeled to accomodate my height</li>
             <li class="list">I once cosplayed as Minecraft Steve in an attempt to look cool in high school.</li>
             <li class="list">I like mustard on hotdogs</li>
+            <li class="list">I have a real human face it looks like <a>this</a></li>
             <li class="list" id="popup-list">Water's not wet</li>
         </ul>
     </div>
