--- a/HTML/about.html
+++ b/HTML/about.html
@@ -62,7 +62,7 @@
             <li class="list">My home had to be remodeled to accomodate my height</li>
             <li class="list">I once cosplayed as Minecraft Steve in an attempt to look cool in high school.</li>
             <li class="list">I like mustard on hotdogs</li>
-            <li class="list">I have a real human face it looks like <a>this</a></li>
+            <li class="list">I have a real human face it looks like <a href="">this</a></li>
             <li class="list" id="popup-list">Water's not wet</li>
         </ul>
     </div>
