--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -1,7 +1,9 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/projects.css" />
     <meta charset="UTF-8" />
@@ -52,13 +54,20 @@
         <h2>these are some things I've made</h2>
         <p>hope you have fun listening/watching/reading them</p>
         <div id="projects">
-            <div class="column" id="webcomicshub"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+            <div class="column" id="webcomicshub"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
                 <p id="text">webcomics hub</p>
             </div>
-            <div class="column" id="spacemannfinn"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
-            <div class="column" id="webcomicshubcast"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
-            <div class="column" id="comics"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
-            <div class="column" id="music"><img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="spacemannfinn"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="webcomicshubcast"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="comics"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="music"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
         </div>
     </div>
-</body></html>
+</body>
+
+</html>
