--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,7 +1,9 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/about.css" />
     <meta charset="UTF-8" />
@@ -53,7 +55,8 @@
     </div>
 
     <div class="about-blurb">
-        <p>Hello, my name is Nen. I do a bunch of things with a bunch of people, check out my projects section to see that but since you're here.
+        <p>Hello, my name is Nen. I do a bunch of things with a bunch of people, check out my projects section to see
+            that but since you're here.
         </p>
 
         <p class="trivia">Random Trivia about Myself</p>
@@ -65,4 +68,6 @@
         </ul>
     </div>
 
-</body></html>
+</body>
+
+</html>
