fleshing out projects

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -60,13 +60,21 @@
                 <p id="text">webcomics hub</p>
             </div>
             <div class="column" id="spacemannfinn"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Personal Livestreams</p>
+                </div>
             <div class="column" id="webcomicshubcast"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Podcast</p>
+                </div>
             <div class="column" id="comics"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Comic Work</p>
+                </div>
             <div class="column" id="music"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Music</p>
+                </div>
         </div>
     </div>
 </body>
