simplified CSS and cleaned up design

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,9 +1,7 @@
 <html lang="en">
 
 <head>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/about.css" />
     <meta charset="UTF-8" />
@@ -50,30 +48,25 @@
             </li>
         </div>
     </div>
+    <div id="about">
+        <div class="title">
+            <h2>i like making things</h2>
+        </div>
 
-    <div class="title">
-        <h2>i like making things</h2>
+        <div class="about-blurb">
+
+            <p>Hello, my name is Nen. I'm a video producer, programmer and I make/do a bunch of other things with a lot of lovely people , check out my projects section to see that but since you're here.
+            </p>
+            <p class="trivia">Random Trivia about Myself</p>
+            <ul>
+                <li class="list">My home had to be remodeled to accomodate my height</li>
+                <li class="list">I once cosplayed as Minecraft Steve in an attempt to look cool in high school.</li>
+                <li class="list">I like mustard on hotdogs</li>
+                <li class="list">I have a real human face it looks like <a href="">this</a></li>
+                <li class="list" id="popup-list">Water's not wet</li>
+            </ul>
+        </div>
     </div>
-
-    <div class="about-blurb">
-<<<<<<< HEAD
-        <p>Hello, my name is Nen. I do a bunch of things with a bunch of people, check out my projects section to see
-            that but since you're here.
-=======
-        <p>Hello, my name is Nen. I'm a video producer, programmer and I make/do a bunch of other things with a lot of lovely people , check out my projects section to see that but since you're here.
->>>>>>> 4419ef7f32f325b45ea14f807c509171ab96f22f
-        </p>
-
-        <p class="trivia">Random Trivia about Myself</p>
-        <ul>
-            <li class="list">My home had to be remodeled to accomodate my height</li>
-            <li class="list">I once cosplayed as Minecraft Steve in an attempt to look cool in high school.</li>
-            <li class="list">I like mustard on hotdogs</li>
-            <li class="list">I have a real human face it looks like <a href="">this</a></li>
-            <li class="list" id="popup-list">Water's not wet</li>
-        </ul>
-    </div>
-
 </body>
 
 </html>
