--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -55,13 +55,13 @@
 
     <div class="contact-blurb">
         <h2>
-            Thanks for sending me a message, I love you bud.
+            thanks for sending me a message, i love you bud
         </h2>
-        <p>If you don't like forms my email is nen@webcomicshub.co.uk</p>
+        <p>if you don't like forms my email is nen@webcomicshub.co.uk</p>
     </div>
 
     <div class="contact-form">
-        <form id="contact form">
+        <form id="contact-form">
             <div class="pronouns">
                 <span class="label-input">pronouns</span><br />
                 <select name="pronouns" id="pronouns">
