--- a/HTML/commissions.html
+++ b/HTML/commissions.html
@@ -5,6 +5,7 @@
         href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/commissions.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -47,6 +48,31 @@
                     <p id="hidetext">discord</p>
                 </a>
             </li>
+        </div>
+    </div>  <div class="projects-showcase">
+        <h2>these are some things I've made</h2>
+        <p>hope you have fun listening/watching/reading them</p>
+        <div id="projects">
+            <div class="column" id="webcomicshub"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                <p id="text">webcomics hub</p>
+            </div>
+            <div class="column" id="spacemannfinn"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Personal Livestreams</p>
+                </div>
+            <div class="column" id="webcomicshubcast"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Podcast</p>
+                </div>
+            <div class="column" id="comics"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Comic Work</p>
+                </div>
+            <div class="column" id="music"><img
+                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                    <p id="text">Music</p>
+                </div>
         </div>
     </div>
 </body>
