--- a/HTML/about.html
+++ b/HTML/about.html
@@ -54,17 +54,20 @@
         </div>
 
         <div class="about-blurb">
-
-            <p>Hello, my name is Nen. I'm a video producer, programmer and I make/do a bunch of other things with a lot of lovely people , check out my projects section to see that but since you're here.
-            </p>
-            <p class="trivia">Random Trivia about Myself</p>
-            <ul>
-                <li class="list">My home had to be remodeled to accomodate my height</li>
-                <li class="list">I once cosplayed as Minecraft Steve in an attempt to look cool in high school.</li>
-                <li class="list">I like mustard on hotdogs</li>
-                <li class="list">I have a real human face it looks like <a href="">this</a></li>
-                <li class="list" id="popup-list">Water's not wet</li>
-            </ul>
+            <div id="about-desc">
+                <p>Hello, my name is Nen. I'm a video producer, programmer and I make/do a bunch of other things with a lot of lovely people , check out my projects section to see that but since you're here.
+                </p>
+            </div>
+            <div id="about-bullet">
+                <p class="trivia">Random Trivia about Myself</p>
+                <ul>
+                    <li class="list">My home had to be remodeled to accomodate my height</li>
+                    <li class="list">I once cosplayed as Minecraft Steve in an attempt to look cool in high school.</li>
+                    <li class="list">I like mustard on hotdogs</li>
+                    <li class="list">I have a real human face it looks like <a href="">this</a></li>
+                    <li class="list" id="popup-list">Water's not wet</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
