--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="/Javascript/webp.js"></script>
     <script type="text/javascript" src="/Javascript/mainjavascript.js"></script>
+    <script type="text/javascript" src="/Javascript/contact.js"></script>
 </head>
 
 <!-- Boilerplate Navbar -->
@@ -66,18 +67,19 @@
                 <span class="label-input">pronouns</span><br />
                 <select name="pronouns" id="pronouns">
                     <option value="" disabled selected hidden></option>
-                    <option value=" male">He/Him</option>
-                    <option value="female">She/Her</option>
-                    <option value="non-gendered">They/Them</option>
-                    <option value="any">Any/All</option>
+                    <option value="He/Him">He/Him</option>
+                    <option value="She/Her">She/Her</option>
+                    <option value="They/Them">They/Them</option>
+                    <option value="Xe/Xir">Xe/Xir</option>
+                    <option value="Any">Any/All</option>
                 </select>
             </div>
             <br />
 
             <div class="name">
                 <span class="label-input">name</span><br />
-                <input name="fname" type="text" class="form-control" required />
-                <input name="lname" type="text" class="form-control" /><br />
+                <input name="fname" id="fname"type="text" class="form-control" required />
+                <input name="lname" id="lname"type="text" class="form-control" /><br />
                 <span class="underlabel">First Name*</span>
                 <span class="underlabel">Last Name</span>
             </div>
@@ -85,17 +87,17 @@
 
             <div class="email">
                 <span class="label-input">email*</span><br />
-                <input name="email" type="email" class="form-control" required />
+                <input name="email" id="email" type="email" class="form-control" required />
             </div>
             <br />
 
             <div class="message">
                 <span class="label-input">message*</span><br />
-                <textarea name="message" class="form-control" rows="4" required></textarea>
+                <textarea name="message" id="message" class="form-control" rows="4" required></textarea>
             </div>
             <br />
             <div class=submit>
-                <input type="submit" class="form-control submit" value="submit" />
+            <input onclick="sendContact()" type="submit" class="form-control submit" value="submit" />
             </div>
         </form>
     </div>
