--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -52,29 +52,39 @@
     </div>
 
     <div class="projects-showcase">
-        <h2>these are some things I've made</h2>
+        <h2>these are some things i've made</h2>
         <p>hope you have fun listening/watching/reading them</p>
         <div id="projects">
-            <div class="column" id="webcomicshub"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
-                <p id="text">webcomics hub</p>
+            <div class="column" id="webcomicshub">
+                <div class="column-contents">
+                    <p id="text">webcomics hub</p>
+                    <img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+                </div>
             </div>
-            <div class="column" id="spacemannfinn"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
-                    <p id="text">Personal Livestreams</p>
+            <div class="column" id="spacemannfinn">
+                <div class="column-contents">
+                    <p id="text">personal livestreams</p>
+                    <img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
                 </div>
-            <div class="column" id="webcomicshubcast"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
-                    <p id="text">Podcast</p>
+            </div>
+            <div class="column" id="webcomicshubcast">
+                <div class="column-contents">
+                    <p id="text">podcast</p>
+                    <img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
                 </div>
-            <div class="column" id="comics"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
-                    <p id="text">Comic Work</p>
+            </div>
+            <div class="column" id="comics">
+                <div class="column-contents">
+                    <p id="text">comic work</p>
+                    <img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
                 </div>
-            <div class="column" id="music"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
-                    <p id="text">Music</p>
+            </div>
+            <div class="column" id="music">
+                <div class="column-contents">
+                    <p id="text">music</p>
+                    <img src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
                 </div>
+            </div>
         </div>
     </div>
 </body>
