--- a/HTML/about.html
+++ b/HTML/about.html
@@ -4,7 +4,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/main.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/about.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -49,11 +49,11 @@
             </li>
         </div>
     </div>
-
+<div id="image-bar">
     <div class="title">
         <h2>i like making things</h2>
     </div>
-
+</div>
     <div class="about-blurb">
         <p>Hello, my name is Nen. I do a bunch of things with a bunch of people, check out my projects section to see
             that but since you're here.
