--- a/HTML/commissions.html
+++ b/HTML/commissions.html
@@ -4,7 +4,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/main.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/commissions.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -46,6 +47,27 @@
                     <p id="hidetext">discord</p>
                 </a>
             </li>
+        </div>
+    </div>
+
+    <div class="commission-showcase">
+        <h2>these are some things people made for me</h2>
+        <p></p>
+        <div id="commissions">
+            <div>
+            <div class="column" id="roach">
+                <p id="text">Error404</p>
+            </div>
+            </div>
+            <div class="column" id="demon">
+                <p id="text">Jenny-Toons</p>
+            </div>
+            <div class="column" id="cat">
+                <p id="text">Momojiji</p>
+            </div>
+            <div class="column" id="bird">
+                <p id="text">the demonic owl</p>
+            </div>
         </div>
     </div>
 </body>
