--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -4,7 +4,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../CSS/MyStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/main.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/projects.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -54,18 +54,18 @@
         <h2>these are some things I've made</h2>
         <p>hope you have fun listening/watching/reading them</p>
         <div id="projects">
-            <div class="column" id="webcomicshub"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder">
+            <div class="column" id="webcomicshub">
                 <p id="text">webcomics hub</p>
             </div>
-            <div class="column" id="spacemannfinn"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
-            <div class="column" id="webcomicshubcast"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
-            <div class="column" id="comics"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
-            <div class="column" id="music"><img
-                    src="https://dummyimage.com/1920x1080/636363/0011ff.png&text=Placeholder"></div>
+            <div class="column" id="spacemannfinn">
+                <p id="text">spacemannfinn</p>
+            </div>
+            <div class="column" id="comics">
+                <p id="text">comic work</p>
+            </div>
+            <div class="column" id="music">
+                <p id="text">comic work</p>
+            </div>
         </div>
     </div>
 </body>
