--- a/nen.studio.html
+++ b/nen.studio.html
@@ -5,7 +5,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Anton&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="/CSS/MyStyle.css" />
+    <link rel="stylesheet" type="text/css" href="/CSS/main.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
